# Nija

./: # Check current Coinbase balance.md  .bandit.yml  .deploy.sh.swp  .dockerignore  .env  .env.baller_tier  .env.copy_trading_example  .env.example  .env.income_tier  .env.investor_safe_profile  .env.investor_tier  .env.kraken_users  .env.livable_tier  .env.master_only  .env.master_profile  .env.micro_capital  .env.production.example  .env.profit_optimized  .env.retail_profile  .env.saver_tier  .env.small_account_preset  .gitignore  .gitleaks.toml  .gitmodules  .nija_kill_switch_state.json  .nija_trading_state.json  .pre-commit-config.yaml  .railway-force-rebuild  .railway-rebuild-1766672019  .railway-trigger  .redeploy_trigger  .render-deploy-timestamp  .render-deploy-trigger-20260716n  .render-trigger  .requirements.txt.swp  .secrets.baseline  15_DAY_OPTIMIZATION.md  ACCOUNT_BALANCE_CONFIRMATION_JAN_11_2026.md  ACCOUNT_CONNECTION_TESTING_GUIDE.md  ACTION_ITEMS.txt  (+2363 more)
.github/: CODEOWNERS  GOD_MODE_CI_IMPLEMENTATION.md  IMPLEMENTATION_COMPLETE_GOD_MODE_CI.md  PRE_COMMIT_SETUP.md  PULL_REQUEST_TEMPLATE_RUNTIME_V26.md  SECRET_SCANNING_POLICY.md  copilot-coding-agent.yml  copilot-instructions.md  pull_request_template.md
.pre-commit-hooks/: README.md  check-direct-broker-exec.py  check-schema-changes.py  check-terminology.sh  risk-freeze-check.py  risk_freeze_check.py
alembic/: env.py
api/: subscription_routes.py
app/: .env  Nija_app.py  __init__.py  app.py  check_coinbase_jwt.py  check_funded_account.py  check_live_trades.py  coinbase_advanced.pem  coinbase_client.py  (+44 more)
(+1838 files in other folders)
