[project]
name = "coinbase-advanced"
version = "0.0.0"
description = "Coinbase Advanced client"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
  "requests>=2.31.0",
]

# --- REMOVE any 'packages' key under [project] if present ---
# do NOT include 'packages' here

[tool.setuptools]
# other setuptools config if present

[tool.setuptools.packages.find]
where = ["src"]
include = ["coinbase_advanced*"]
