[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "coinbase_advanced"
version = "0.1.0"
description = "Coinbase Advanced client"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
  "requests>=2.31.0"
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["coinbase_advanced*"]
